Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrDevice__c/HealthCloudGA__EhrDevice__c.object-meta.xml
<CustomObject>
    <fullName>HealthCloudGA__EhrDevice__c</fullName>
    <description>An instance of a manufactured thing that is used in the provision of healthcare without being substantially changed through that activity. The device may be a machine, an insert, a computer, an application, etc. This includes durable (reusable) medical equipment as well as disposable equipment used for diagnostic, treatment, and research for healthcare and public health.</description>
    <label>EHR Device</label>
    <nameField>
        <displayFormat>Devi-{0}</displayFormat>
        <label>EHR Device ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Devices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>