Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrDevice__c/fields/HealthCloudGA__Contact__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Contact__c</fullName>
    <description>Contact Details for human/organization for support</description>
    <label>Contact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>