Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrDevice__c/fields/HealthCloudGA__DeviceUrl__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DeviceUrl__c</fullName>
    <description>Network address to contact device</description>
    <label>Device URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>