Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrDevice__c/fields/HealthCloudGA__Expiry__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Expiry__c</fullName>
    <label>Expiry</label>
    <type>Date</type>
</CustomField>