Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrDevice__c/fields/HealthCloudGA__IsVisibleOnPatientCard__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
    <description>If returns true, the record will appear on Patient Card</description>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsVisibleOnPatientCard</label>
    <type>Checkbox</type>
</CustomField>