Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrDevice__c/fields/HealthCloudGA__Location__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Location__c</fullName>
    <label>Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>