Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrDevice__c/fields/HealthCloudGA__Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Manufacturer__c</fullName>
    <description>Name of device manufacturer</description>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>