Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrDevice__c/fields/HealthCloudGA__SourceSystemId__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SourceSystemId__c</fullName>
    <label>Source System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>