Demo Selika/force-app/main/default/objects/HealthCloudGA__EhrDevice__c/fields/HealthCloudGA__Type__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Type__c</fullName>
    <description>What kind of device this is</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>